// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DESCRIPTION test DESCRIPTION component 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <h1
      className="h1"
    >
      VENOM
    </h1>
    <ul
      className="list"
    >
      <li
        className="item"
      >
        Action
      </li>
      <li
        className="item"
      >
        Crime
      </li>
      <li
        className="item"
      >
        Horror
      </li>
      <li
        className="item"
      >
        Science Fiction
      </li>
    </ul>
    <div
      className="container"
    >
      <div>
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
      </div>
      <div
        className="x"
        style={
          Object {
            "width": "132px",
          }
        }
      >
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
      </div>
      <div
        className="container"
      >
        6.6
      </div>
    </div>
  </div>
  <div
    className="buttonsBlock"
  >
    <button
      className="container"
      onClick={[Function]}
      type="button"
    >
      Watch Now
    </button>
    <button
      className="container"
      onClick={[Function]}
      type="button"
    >
      View Info
    </button>
  </div>
</div>
`;

exports[`DESCRIPTION test DESCRIPTION component click "View Info" 1`] = `
<div
  className="container"
>
  <div
    className="container"
  >
    <h1
      className="h1"
    >
      VENOM
    </h1>
    <ul
      className="list"
    >
      <li
        className="item"
      >
        Action
      </li>
      <li
        className="item"
      >
        Crime
      </li>
      <li
        className="item"
      >
        Horror
      </li>
      <li
        className="item"
      >
        Science Fiction
      </li>
    </ul>
    <div
      className="container"
    >
      <div>
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
      </div>
      <div
        className="x"
        style={
          Object {
            "width": "132px",
          }
        }
      >
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
        <img
          alt="star"
          className="star"
          src="test-file-stub"
        />
      </div>
      <div
        className="container"
      >
        6.6
      </div>
    </div>
  </div>
  <div
    className="prevField"
  >
    <div
      className="container"
    >
      <div
        className="buttonsBlock"
      >
        <div
          className="previewField"
        >
          When Eddie Brock acquires the powers of a symbiote, he will have to release his alter-ego "Venom" to save his life.
        </div>
      </div>
    </div>
  </div>
  <div
    className="buttonsBlock"
  >
    <button
      className="container"
      onClick={[Function]}
      type="button"
    >
      Watch Now
    </button>
    <button
      className="container"
      onClick={[Function]}
      type="button"
    >
      View Info
    </button>
  </div>
</div>
`;
